# dxp-todo-backend

./: .env  .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
dbopen/: Cargo.toml
dbopen/src/: lib.rs
heart/: Cargo.toml
heart/src/: endpoint.rs  lib.rs  server.rs  watcher.rs
heart/src/routes/api/: api_doc.rs  authenticate.rs  axum_session.rs  hello_world.rs  mod.rs  session.rs  todo.rs
heart/src/routes/index/: mod.rs
heart/src/routes/swagger_ui/: mod.rs
heart/src/session/: object.rs
heart/src/session/abstractions/: memory.rs  redis.rs
lib/: Cargo.toml
lib/src/: lib.rs  migration.rs  server.rs  session.rs
lib/src/endpoints/: index.rs  mod.rs
lib/src/endpoints/api/: mod.rs
logging/: Cargo.toml
logging/src/: lib.rs
migration/: Cargo.toml
migration-runner/: Cargo.toml
migration-runner/src/: cold.rs  hot.rs  lib.rs  migration.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs
server/: Cargo.toml
server/src/: cold.rs  endpoint.rs  endpoints.rs  error_layer.rs  hot.rs  lib.rs  server.rs  session.rs
server/src/api_security/: api_key.rs
server/src/endpoints/: index.rs  mod.rs  session.rs
server/src/endpoints/api/: endpoints.rs  hello_world.rs  mod.rs  refresh.js  session.rs  swagger.rs  test.rs
server/src/endpoints/session/: db_storage.rs  memory_storage.rs  mod.rs  object.rs  redis.rs
server/src/endpoints/swagger_ui/: mod.rs
server/src/error/: mod.rs
server/src/routes/: hot.rs  mod.rs
server/src/routes/api/: api_doc.rs  authenticate.rs  axum_session.rs  hello_world.rs  mod.rs  security.rs  session.rs  test.rs  todo.rs
server/src/routes/api/security/: api_key.rs
server/src/routes/index/: mod.rs
server/src/routes/swagger_ui/: mod.rs
server/src/session/: api_session.rs  api_session_container.rs  mod.rs  object.rs  storage.rs  storage_type.rs
server/src/session/abstractions/: database.rs  memory.rs  mod.rs  redis.rs
server/src/session/api_session/: middleware.rs  mod.rs
server/src/state/: mod.rs
src/: hot_libs.rs  main.rs  main_task.rs  observe.rs  observe_reloads.rs  path_info.rs
src/server/: cold.rs  hot.rs  mod.rs  observe.rs
swagger/: Cargo.toml
swagger/src/: lib.rs
