[workspace]
resolver = "2"
members = ["dbopen","server", "migration", "migration-runner", "logging"]

[package]
name = "dx_todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hot-lib-reloader = { version = "^0.7.0", optional = true }
server = { path = "server", default-features = false }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
migration-runner = { workspace = true, optional = true }
tracing = { workspace = true }
logging = { workspace = true, optional = true, default-features = false }

[workspace.dependencies]
poem = { version = "^3.0.1" }
poem-grants = { version ="^3.0.0" }
poem-openapi = { version = "^5.0.2" }
dotenvy = { version = "^0.15.7" }
tokio = { version = "^1.37.0", default-features = false }
anyhow = { version = "^1.0.86", features = ["backtrace"] }
dbsession = { git = "https://github.com/887/dbsession.git", default-features = true }
sea-orm = { version = "^0.12.15", default-features = false }
dbopen = { path = "dbopen", default-features = false }
migration = { path = "migration", default-features = false }
migration-runner = { path = "migration-runner", default-features = false }
base64 = "^0.22.1"
swagger-ui-embed = { git = "https://github.com/887/swagger-ui-embed.git" }
chrono = {version = "^0.4.38", default-features = false}
tracing = "^0.1.40"
logging = { path = "logging", default-features = false }
serde = { version = "^1.0.203", features = ["derive"] }

[features]
default = ["sqlite-rustls", "migration", "log", "hot-reload"]
path-info = []
hot-reload = ["dep:hot-lib-reloader", "migration-runner/hot-reload", "server/hot-reload"]
migration = ["dep:migration-runner"]
mysql-rustls = ["server/mysql-rustls", "migration-runner/mysql-rustls"]
mysql-native-tls = ["server/mysql-native-tls", "migration-runner/mysql-native-tls"]
sqlite-rustls = ["server/sqlite-rustls", "migration-runner/sqlite-rustls"]
sqlite-native-tls = ["server/sqlite-native-tls", "migration-runner/sqlite-native-tls"]
postgres-rustls = ["server/postgres-rustls", "migration-runner/postgres-rustls"]
postgres-native-tls = ["server/postgres-native-tls", "migration-runner/postgres-native-tls"]
log=["dep:logging", "logging/log", "server/log", "migration-runner/log"]
log-file=["log", "logging/log-file", "server/log-file", "migration-runner/log-file"]
