[workspace]
resolver = "2"
members = ["server", "migration", "migration-runner"]

[package]
name = "dxp-todo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hot-lib-reloader = { version = "^0.7.0", optional = true }
server = { path = "server", default-features = false }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
migration-runner = { workspace = true, optional = true }
tracing = { workspace = true }
dxp-logging = { workspace = true, optional = true, default-features = false }

[workspace.dependencies]
poem = { version = "^3.0.1" }
poem-openapi = { version = "^5.0.2" }
dotenvy = { version = "^0.15.7" }
tokio = { version = "^1.37.0", default-features = false }
anyhow = { version = "^1.0.86", features = ["backtrace"] }
sea-orm = { version = "^1.0.1", default-features = false }
migration = { path = "migration", default-features = false }
migration-runner = { path = "migration-runner", default-features = false }
base64 = "^0.22.1"
chrono = {version = "^0.4.38", default-features = false}
tracing = "^0.1.40"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = { version = "^1.0.68" }
rand = "^0.8.5"
dxp-db-session = { git = "https://github.com/887/dxp-db-session.git", default-features = true }
dxp-db-open = { git = "https://github.com/887/dxp-db-open.git", default-features = false}
swagger-ui-embed = { git = "https://github.com/887/swagger-ui-embed.git", features = ["poem"] }
dxp-logging = { git = "https://github.com/887/dxp-logging.git", default-features = false }
dxp-code-loc = { git = "https://github.com/887/dxp-code-loc.git" }

[features]
default = ["sqlite-rustls", "migration", "swagger-ui", "log", "hot-reload"]
swagger-ui = ["server/swagger-ui"]
path-info = []
hot-reload = ["dep:hot-lib-reloader", "migration-runner/hot-reload", "server/hot-reload"]
migration = ["dep:migration-runner"]
mysql-rustls = ["server/mysql-rustls", "migration-runner/mysql-rustls"]
mysql-native-tls = ["server/mysql-native-tls", "migration-runner/mysql-native-tls"]
sqlite-rustls = ["server/sqlite-rustls", "migration-runner/sqlite-rustls"]
sqlite-native-tls = ["server/sqlite-native-tls", "migration-runner/sqlite-native-tls"]
postgres-rustls = ["server/postgres-rustls", "migration-runner/postgres-rustls"]
postgres-native-tls = ["server/postgres-native-tls", "migration-runner/postgres-native-tls"]
log=["dep:dxp-logging", "dxp-logging/log", "server/log", "migration-runner/log"]
log-file=["log", "dxp-logging/log-file", "server/log-file", "migration-runner/log-file"]
