[workspace]
resolver = "2"
members = ["heart", "migration", "migration-runner"]

[package]
name = "dxp-todo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hot-lib-reloader = { version = "^0.7.0", optional = true }
heart = { path = "heart", default-features = false }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "sync", "time", "macros"] }
migration-runner = { workspace = true, optional = true }
tracing = { workspace = true }
dxp-logging = { workspace = true, optional = true, default-features = false }

[workspace.dependencies]
# poem = { version = "^3.0.1" }
# poem-openapi = { version = "^5.0.2" }
dotenvy = { version = "^0.15.7" }
tokio = { version = "^1.40.0", default-features = false }
anyhow = { version = "^1.0.89", features = ["backtrace"] }
sea-orm = { version = "^1.0.1", default-features = false }
migration = { path = "migration", default-features = false }
migration-runner = { path = "migration-runner", default-features = false }
base64 = "^0.22.1"
chrono = {version = "^0.4.38", default-features = false}
tracing = "^0.1.40"
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = { version = "^1.0.128" }
rand = "^0.8.5"
# dxp-db-session = { git = "https://github.com/887/dxp-db-session.git" }
dxp-axum-session = { git = "https://github.com/887/dxp-axum-session.git", default-features = false }
dxp-db-open = { git = "https://github.com/887/dxp-db-open.git", default-features = false}
swagger-ui-embed = { git = "https://github.com/887/swagger-ui-embed.git" }
dxp-logging = { git = "https://github.com/887/dxp-logging.git", default-features = false }
dxp-code-loc = { git = "https://github.com/887/dxp-code-loc.git" }
utoipa = { version = "5.0.0", features = ["yaml"] }
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-server = "0.7.1"
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["compression-zstd", "trace"] }
axum_session = { version = "0.14.0", default-features = false, features = ["rest_mode"] }
# axum_session_redispool = { version = "0.3.0" }
# redis = { version = "0.23.0" }
# redis_pool = { version = "0.23.0" }
utoipauto = { version = "0.1.14", features = [] }

[features]
# default = ["sqlite-rustls", "migration", "swagger-ui", "log"]
default = ["sqlite-rustls", "migration", "swagger-ui", "log", "hot-reload"]

swagger-ui = ["heart/swagger-ui"]
path-info = []
hot-reload = ["dep:hot-lib-reloader", "migration-runner/hot-reload", "heart/hot-reload"]
migration = ["dep:migration-runner"]
redis = ["heart/redis"]
mysql-rustls = ["heart/mysql-rustls", "migration-runner/mysql-rustls"]
mysql-native-tls = ["heart/mysql-native-tls", "migration-runner/mysql-native-tls"]
sqlite-rustls = ["heart/sqlite-rustls", "migration-runner/sqlite-rustls"]
sqlite-native-tls = ["heart/sqlite-native-tls", "migration-runner/sqlite-native-tls"]
postgres-rustls = ["heart/postgres-rustls", "migration-runner/postgres-rustls"]
postgres-native-tls = ["heart/postgres-native-tls", "migration-runner/postgres-native-tls"]
log=["dep:dxp-logging", "heart/log", "migration-runner/log"]
log-file=["log", "dxp-logging/log-file", "heart/log-file", "migration-runner/log-file"]
