[package]
name = "dbopen"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true, features = [
    "sea-orm-internal"
] }

[features]
default = ["sqlite-rustls"]
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite"]
postgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres"]
postgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres"]
