[package]
name = "heart"
version = "0.1.0"
edition = "2021"

[lib]
name = "heart"
crate-type = ["rlib", "dylib"]

[dependencies]
# poem = { workspace = true, features = ["compression", "session"]}
# poem-openapi = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "sync", "time", "macros", "net", "process"] }
anyhow = { workspace = true }
# dxp-db-session = { workspace = true, features = ["dbsession"] }
dxp-axum-session = { workspace = true, features = ["db_pool", "memory_pool"]}
sea-orm = { workspace = true, default-features = false, features = [
    "macros",
    "sea-orm-internal"
] }
dxp-db-open = { workspace = true, default-features = false }
base64 = { workspace = true }
swagger-ui-embed = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dxp-logging = { workspace = true, optional = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
dxp-code-loc = { workspace = true }
rand = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true, features = ["http2"] }
axum-server = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
axum_session = { workspace = true }
# axum_session_redispool = { workspace = true, optional = true}
# redis_pool = { workspace = true, optional = true}
# redis = { workspace = true, optional = true}
utoipauto = { workspace = true }

[features]
#default features are the ones that hot reload uses to build when saving a file
default = ["swagger-ui", "log", "sqlite-rustls", "hot-reload"]
swagger-ui = []
hot-reload = []
redis = []
# redis = ["axum_session_redispool", "redis_pool", "redis"] #currently not implemented
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql", "dxp-db-open/mysql-rustls"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql", "dxp-db-open/mysql-native-tls"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite", "dxp-db-open/sqlite-rustls"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite", "dxp-db-open/sqlite-native-tls"]
postgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres", "dxp-db-open/postgres-rustls"]
postgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres", "dxp-db-open/postgres-native-tls"]
log=["dep:dxp-logging"]
log-file=["log", "dxp-logging/log-file"]
