[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
poem = { workspace = true, features = ["compression"]}
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
migration-runner = { workspace = true, optional = true, default-features = false }
dbsession = { workspace = true, features = ["dbsession"] }
sea-orm = { workspace = true, features = [
    "sea-orm-internal"
] }
dbopen = { workspace = true, default-features = false }

[features]
default = ["migration", "sqlite-rustls"]
migration = ["dep:migration-runner"]
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql", "migration-runner/mysql-rustls", "dbopen/mysql-rustls"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql", "migration-runner/mysql-native-tls", "dbopen/mysql-native-tls"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite", "migration-runner/sqlite-rustls", "dbopen/sqlite-rustls"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite", "migration-runner/sqlite-native-tls", "dbopen/sqlite-native-tls"]
posgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres", "migration-runner/posgres-rustls", "dbopen/posgres-rustls"]
posgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres", "migration-runner/posgres-native-tls", "dbopen/posgres-native-tls"]