[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
crate-type = ["rlib", "dylib"]

[dependencies]
poem = { workspace = true, features = ["compression"]}
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
dbsession = { workspace = true, features = ["dbsession"] }
sea-orm = { workspace = true, features = [
    "sea-orm-internal"
] }
dbopen = { workspace = true, default-features = false }

[features]
default = ["sqlite-rustls", "hot-reload"]
hot-reload = []
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql", "dbopen/mysql-rustls"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql", "dbopen/mysql-native-tls"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite", "dbopen/sqlite-rustls"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite", "dbopen/sqlite-native-tls"]
posgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres", "dbopen/posgres-rustls"]
posgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres", "dbopen/posgres-native-tls"]