[package]
name = "migration-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration_runner"
crate-type = ["rlib", "dylib"]

[dependencies]
migration = { workspace = true }
sea-orm = { workspace = true, features = [
    "sea-orm-internal"
] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "net"] }
dbopen = { workspace = true, default-features = false }

[features]
default = ["sqlite-rustls", "hot-reload"]
hot-reload = []
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite"]
posgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres"]
posgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres"]
