[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
crate-type = ["rlib", "dylib"]

[dependencies]
poem = { workspace = true, features = ["compression"]}
poem-openapi = { workspace = true, features = ["swagger-ui"] }
poem-grants = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "net"] }
anyhow = { workspace = true }
dbsession = { workspace = true, features = ["dbsession"] }
sea-orm = { workspace = true, default-features = false, features = [
    "macros",
    "sea-orm-internal"
] }
dbopen = { workspace = true, default-features = false }
base64 = { workspace = true }

[features]
default = ["sqlite-rustls", "hot-reload"]
hot-reload = []
redis = [] #currently not implemented
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql", "dbopen/mysql-rustls"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql", "dbopen/mysql-native-tls"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite", "dbopen/sqlite-rustls"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite", "dbopen/sqlite-native-tls"]
postgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres", "dbopen/postgres-rustls"]
postgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres", "dbopen/postgres-native-tls"]